--- a/src/App.css
+++ b/src/App.css
@@ -276,7 +276,7 @@ body {
     max-width: 100vw !important;
     margin: 0 !important;
     border-radius: 0 !important;
-    padding-left: 0 !important;
-    padding-right: 0 !important;
+    padding-left: 5vw !important;
+    padding-right: 5vw !important;
   }
 }
